# Interactive-Global-Climate-Explorer

./: .gitignore  FINAL_ACCEPTANCE_CHECKLIST.md  FINAL_REPORT.md  README.md  app.py  pyproject.toml  requirements.txt  run_pipeline.py
final_climate_spec_bundle/: 00_bundle_readme.md  01_final_scope_freeze.md  02_final_schema.md  03_final_pipeline_tasks.md  04_final_ui_data_spec.md  05_final_acceptance_checklist.md  06_final_codex_prompt.md
outputs/: app_config.json  climate_regions.geojson  grid_climate_map.parquet  region_1996_2025_yearly.parquet  region_2025_monthly.parquet  region_summary.parquet
src/climate_explorer/: __init__.py  app_entry.py  config.py  pipeline.py  ui.py
